# DFI-public

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: FindGTest.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  FindZMQ.cmake  GoogleTest.cmake
src/: CMakeLists.txt
src/conf/: DFI.conf
src/dfi/: CMakeLists.txt
src/dfi/flow/: CMakeLists.txt  FlowHandle.h  FlowSourceBW.h  FlowSourceBWReplicate.h  FlowSourceFactory.h  FlowSourceInterface.h  FlowSourceLat.h  FlowSourceMulticast.h  FlowSourceMulticastBW.h  FlowTarget.cc  FlowTarget.h
src/dfi/memory/: BufferHandle.h  BufferReader.h  BufferSegment.h  BufferWriter.cc  BufferWriter.h  BufferWriterInterface.h  BufferWriterLocal.h  BufferWriterMulticast.h  BufferWriterReplicate.h  CMakeLists.txt  FlowOptimization.h  MulticastSegmentBuffer.h  NodeClient.cc  NodeClient.h  NodeServer.cc  NodeServer.h
src/dfi/memory/local_iterators/: BufferIterator.h  BufferIteratorMulticast.h  SegmentIterator.h
src/dfi/message/: CMakeLists.txt  DFIAllocSegmentsRequest.proto  DFIAllocSegmentsResponse.proto  DFIAppendBufferRequest.proto  DFIAppendBufferResponse.proto  DFICreateFlowRequest.proto  DFICreateFlowResponse.proto  DFICreateRingOnBufferRequest.proto  DFICreateRingOnBufferResponse.proto  DFIDestroyFlowRequest.proto  DFIFlowBarrierRequest.proto  DFIFlowBarrierResponse.proto  DFIFreeSegmentsRequest.proto  DFIRetrieveBufferRequest.proto  DFIRetrieveBufferResponse.proto  DFIRetrieveFlowHandleRequest.proto  DFIRetrieveFlowHandleResponse.proto  MessageErrors.h  MessageTypes.h
src/dfi/registry/: CMakeLists.txt  RegistryClient.cc  RegistryClient.h  RegistryServer.cc  RegistryServer.h
src/dfi/type/: BigInt.cc  BigInt.h  CMakeLists.txt  Double.cc  Double.h  EnumTypes.h  ErrorCodes.h  Floating.cc  Floating.h  Int.cc  Int.h  Schema.h  SmallInt.cc  SmallInt.h  TinyInt.cc  TinyInt.h  Tuple.h  Type.cc  Type.h  TypeId.h  UBigInt.cc  UBigInt.h  Value.cc  Value.h
src/flow-api/: CMakeLists.txt  combiner_flow_init.h  combiner_flow_source.h  combiner_flow_target.h  dfi.h  dfi_node.h  flow_barrier.h  flow_barrier_init.h  registry_server.h  replicate_flow_init.h  replicate_flow_source.h  replicate_flow_target.h  schema.h  shuffle_flow_init.h  shuffle_flow_source.h  shuffle_flow_target.h
src/gtest/: CMakeLists.txt
src/gtest/examples/: combiner_flow_examples.cc  combiner_flow_examples.h  replicate_flow_examples.cc  replicate_flow_examples.h  shuffle_flow_examples.cc  shuffle_flow_examples.h
src/gtest/flow-api/: combiner_flow_tests.cc  combiner_flow_tests.h  flow_barrier_tests.cc  flow_barrier_tests.h  replicate_flow_tests.cc  replicate_flow_tests.h  shuffle_flow_tests.cc  shuffle_flow_tests.h
src/gtest/memory/: IntegrationTestsAppend.cc  IntegrationTestsAppend.h  TestBufferIterator.cc  TestBufferIterator.h  TestBufferWriter.cc  TestBufferWriter.h  TestBufferWriterLat.cc  TestBufferWriterLat.h  TestBufferWriterReplicate.cc  TestBufferWriterReplicate.h  TestConfig.cc  TestConfig.h  TestRegistryClient.cc  TestRegistryClient.h
src/use-cases/distributed-radix-join-flow/: BuildProber.h  BuildProberThread.h  CMakeLists.txt  DistributedRadixJoin.h  LocalPartitioner.h  LocalPartitionerThread.h  Main.cc  NetworkPartitioner.h  NetworkPartitionerThread.h  Partition.h  README  Settings.cc  Settings.h  runExperiment.py
src/use-cases/distributed-radix-join-flow/utils/: HashTable.h  Thread.cc  ThreadScheduler.cc  ThreadScheduler.h
src/use-cases/distributed-replicate-join-flow/: BuildProber.h  BuildProberThread.h  CMakeLists.txt  DistributedReplicateJoin.h  LocalDFIPartitioner.h  LocalDFIPartitionerThread.h  LocalPartitioner.h  LocalPartitionerThread.h  Main.cc  NetworkReplicator.h  NetworkReplicatorThread.h  Partition.h  README  Relation.h  Settings.cc  Settings.h  runExperiment.py
src/use-cases/distributed-replicate-join-flow/utils/: HashTable.h  Thread.h  ThreadScheduler.cc  timer.hpp
src/use-cases/rsm-nopaxos/: CMakeLists.txt  Log.h  Main.cc  NoPaxosAcceptor.h  NoPaxosClient.h  Settings.cc  Settings.h  benchmark.sh
src/use-cases/rsm-nopaxos/utils/: HashTable.h  ThreadScheduler.h
src/use-cases/rsm-paxos/: CMakeLists.txt  KV_SM.h  Log.h  Main.cc  PaxosAcceptor.h  PaxosClient.h  PaxosLeader.h  Settings.cc  Settings.h  benchmark.sh
src/use-cases/rsm-paxos/utils/: HashTable.h  ThreadScheduler.cc
src/use-cases/utils/: LogWriter.h  RdmaCounter.h  StringHelper.h  ThreadUtil.h
src/utils/: CMakeLists.txt  Config.cc  Config.h  Filehelper.h  Logging.h  MPMCQueue.h  Network.h  PerfEvent.h  StringHelper.h  Timer.h
